--- a/templates/ulaz.html
+++ b/templates/ulaz.html
@@ -10,6 +10,7 @@
         <script src="/static/fullcalendar.js"></script>
         <link rel="stylesheet" href="/static/style/calendar.css">
         <link rel="stylesheet" href="/static/style/fullcalendar.css">-->
+        <!-- <script type="text/javascript" src="{{ url_for('static', filename='cssrefresh.js') }}"></script> -->
     </head>
     <body>
 
@@ -97,6 +98,8 @@
 
     </div>
 </div>
+<table id="ostali"></table>
 
+<div id="details"></div>
     </body>
 </html>
